# web-clipping-draft

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: graph.py  main.py  state.py
agent/agents/: analyzer_agent.py  content_extractor.py  report_generator.py  search_agent.py  summarization_agent.py
agent/utils/: async_tools.py  llm.py  ranker.py  tools.py
client/: package-lock.json  package.json
client/app/: page.tsx
client/components/: LiveStatus.tsx  ReportViewer.tsx  ResearchForm.tsx
client/lib/: api.ts
docs/: setup_guide.md
server/: job_manager.py  main.py
src/: graph.py  main.py  server.py
src/agents/: analyzer_agent.py  content_extractor.py  report_generator.py  search_agent.py  summarization_agent.py
src/utils/: async_tools.py  input_handler.py  ranker.py  tools.py
